# oroboros-engine

./: .gitignore  Cargo.toml  README.md  build_all.sh  build_web.sh  תיעוד.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/shaders/unit2/: gpu_culling.wgsl  volumetric_fog.wgsl  voxel_instanced.wgsl
assets/shaders/wgsl/: basic.wgsl
crates/oroboros/: Cargo.toml
crates/oroboros/assets/shaders/: gameplay_alpha.wgsl
crates/oroboros/src/: events.rs  game_loop.rs  lib.rs  physics.rs
crates/oroboros/src/gameplay/: mod.rs  npc.rs
crates/oroboros/src/integration/: combat.rs  mod.rs  vertical_slice.rs
crates/oroboros_blockchain/: Cargo.toml
crates/oroboros_blockchain/benches/: blockchain_benchmark.rs  realistic_benchmark.rs
crates/oroboros_blockchain/contracts/script/: DeployEconomy.s.sol
crates/oroboros_blockchain/contracts/src/: OrobosItems.sol  OrobosToken.sol  TheVault.sol
crates/oroboros_blockchain/contracts/test/: Economy.t.sol
crates/oroboros_blockchain/src/: lib.rs
crates/oroboros_blockchain/src/contracts/: mod.rs
crates/oroboros_blockchain/src/events/: mod.rs
crates/oroboros_blockchain/src/ipc/: mod.rs
crates/oroboros_blockchain/src/listener/: mod.rs
crates/oroboros_blockchain/src/state/: mod.rs
crates/oroboros_core/: Cargo.toml
crates/oroboros_core/benches/: archetype_benchmark.rs  dirty_copy_benchmark.rs  ecs_benchmark.rs  realistic_ecs_benchmark.rs
crates/oroboros_core/src/: lib.rs
crates/oroboros_core/src/ecs/: archetype.rs  component.rs  entity.rs  mod.rs  storage.rs  world.rs
crates/oroboros_core/src/memory/: arena.rs  mod.rs  pool.rs
crates/oroboros_core/src/sync/: double_buffer.rs  mod.rs
crates/oroboros_economy/: Cargo.toml
crates/oroboros_economy/benches/: crafting_benchmark.rs  loot_benchmark.rs
crates/oroboros_economy/src/: crafting.rs  error.rs  fixed_point.rs  integration.rs  inventory.rs  lib.rs  loot.rs  systems.rs  wal.rs  wal_batched.rs
crates/oroboros_economy/tests/: batched_wal_test.rs
crates/oroboros_networking/: Cargo.toml
crates/oroboros_networking/src/: interpolation.rs  lib.rs
crates/oroboros_networking/src/client/: mod.rs
crates/oroboros_networking/src/integration/: actions.rs  events.rs  game_loop.rs  mod.rs  traits.rs
crates/oroboros_networking/src/prediction/: mod.rs
crates/oroboros_networking/src/protocol/: compression.rs  mod.rs  packets.rs  serialization.rs
crates/oroboros_networking/src/server/: connection.rs  mod.rs  state.rs  tick.rs
crates/oroboros_networking/src/simulation/: mod.rs  realistic.rs
crates/oroboros_networking/src/snapshot/: mod.rs
crates/oroboros_networking/src/transport/: mod.rs
crates/oroboros_procedural/: Cargo.toml
crates/oroboros_procedural/benches/: chunk_benchmark.rs  noise_benchmark.rs
crates/oroboros_procedural/src/: biome.rs  chunk.rs  chunk_persistence.rs  lib.rs  noise.rs  world_manager.rs
crates/oroboros_procedural/tests/: infinite_walk_test.rs  terrain_quality_test.rs
crates/oroboros_rendering/: Cargo.toml
crates/oroboros_rendering/examples/: asset_pipeline_demo.rs  cold_fusion_integration.rs  golden_path_demo.rs
crates/oroboros_rendering/shaders/: gpu_culling.wgsl  occlusion_test.wgsl  ssr.wgsl  voxel_instanced.wgsl
crates/oroboros_rendering/src/: lib.rs
crates/oroboros_rendering/src/assets/: mod.rs  procedural_models.rs  vox_loader.rs
crates/oroboros_rendering/src/atmosphere/: half_res.rs  mod.rs  neon_lighting.rs  ssr.rs  volumetric_fog.rs
crates/oroboros_rendering/src/culling/: frustum.rs  mod.rs  occlusion.rs
crates/oroboros_rendering/src/effects/: event_visualizer.rs  mod.rs  particle_shaders.rs  particle_system.rs
crates/oroboros_rendering/src/instancing/: buffer.rs  gpu_driven.rs  instance_data.rs  mod.rs  renderer.rs
crates/oroboros_rendering/src/integration/: core_adapter.rs  game_events.rs  mod.rs  render_bridge.rs  render_loop.rs
crates/oroboros_rendering/src/interop/: entity_sync.rs  mod.rs  position_view.rs  shared_state.rs
crates/oroboros_rendering/src/pipeline/: frame.rs  mod.rs  stats.rs
crates/oroboros_rendering/src/voxel/: chunk.rs  greedy_mesh.rs  material_system.rs  mod.rs  palette.rs  standard_mesher.rs  world.rs
crates/oroboros_security/: Cargo.toml
crates/oroboros_security/src/: lib.rs
crates/oroboros_security/src/anti_cheat/: mod.rs
crates/oroboros_security/src/replay/: compressed.rs  mod.rs
crates/oroboros_security/src/validation/: mod.rs
crates/oroboros_shared/: Cargo.toml
crates/oroboros_shared/src/: constants.rs  events.rs  lib.rs  math.rs  protocol.rs
crates/oroboros_ui/: Cargo.toml
crates/oroboros_ui/src/: animation.rs  input.rs  layout.rs  lib.rs  render.rs  style.rs
crates/oroboros_ui/src/widget/: core.rs  inventory.rs  mod.rs  tooltip.rs  tree.rs
data/schemas/economy/: crafting_recipes.toml  items.toml  loot_tables.toml
data/schemas/world/: biomes.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/wasm/: glitch_wars.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: GameView.tsx  Header.tsx  NotificationFeed.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/store/: gameStore.ts
scripts/: build-silent.sh  irq-affinity-setup.sh  verify-isolation.sh
server/: index.js  package-lock.json  package.json  server.js
server/src/: GameRoom.js  MapStorage.js  Player.js  RoomManager.js
src/blockchain/contracts/: foundry.toml
src/blockchain/contracts/solidity/: PolymorphicNFT.sol
src/worlds/inferno/dragon/: event_driven.rs  mod.rs  state_machine.rs
tests/: squad_veridia_verification.rs
web/: index.html  style.css
web/assets/models/characters/player/: .gitkeep
web/assets/models/creatures/enemies/: .gitkeep
web/assets/models/vox/: .gitkeep
web/assets/shaders/unit2/: bilateral_upscale.wgsl  neon_lighting.wgsl  occlusion_hiz_generate.wgsl
