# =============================================================================
# OROBOROS - Main Game Crate
# =============================================================================
# ARCHITECT'S MANDATE: Feature Separation
#
# This crate provides TWO binaries:
# - `oroboros_client`: Requires GPU, runs on player machines
# - `oroboros_server`: Headless, runs on German servers
#
# RULE: Server must NEVER pull GPU dependencies.
#       If `cargo build --bin oroboros_server` touches wgpu, YOU'RE FIRED.
# =============================================================================

[package]
name = "oroboros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OROBOROS - The Game"

[dependencies]
# ============================================
# ALWAYS INCLUDED (both client and server)
# ============================================

# Unit 1: Core Kernel - ECS, memory, double buffer
oroboros_core = { path = "../oroboros_core" }

# Shared types - protocols, events, math
oroboros_shared = { path = "../oroboros_shared" }

# Unit 3: Economy - loot, WAL, transactions
oroboros_economy = { path = "../oroboros_economy" }

# Procedural Generation - Infinite terrain
oroboros_procedural = { path = "../oroboros_procedural" }

# Base dependencies
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

# ============================================
# CLIENT ONLY - GPU and window required
# ============================================

# Unit 2: Rendering (CLIENT ONLY - requires GPU)
oroboros_rendering = { path = "../oroboros_rendering", optional = true }

# Window creation (CLIENT ONLY)
winit = { version = "0.29", optional = true }

# GPU (CLIENT ONLY) - for direct window surface creation
wgpu = { version = "0.19", optional = true }

# Async runtime helper (CLIENT ONLY)
pollster = { version = "0.3", optional = true }

# ============================================
# NETWORK FEATURES (both, but optional)
# ============================================

# Unit 4: Networking
oroboros_networking = { path = "../oroboros_networking", optional = true }

# Security
oroboros_security = { path = "../oroboros_security", optional = true }

[features]
default = []

# Full client with all features
client = ["rendering", "networking", "security", "dep:winit", "dep:wgpu", "dep:pollster"]

# Full server with all features  
server = ["networking", "security"]

# Individual features
rendering = ["dep:oroboros_rendering"]
networking = ["dep:oroboros_networking"]
security = ["dep:oroboros_security"]

# ============================================
# BINARIES
# ============================================

# THE CLIENT - Has graphics, runs on player's machine
[[bin]]
name = "oroboros_client"
path = "src/bin/client.rs"
required-features = ["client"]

# THE SERVER - Headless, runs in Germany
[[bin]]
name = "oroboros_server"
path = "src/bin/server.rs"
required-features = ["server"]

# ============================================
# TEST BINARIES
# ============================================

[[bin]]
name = "vertical_slice_test"
path = "src/bin/vertical_slice_test.rs"
required-features = ["networking", "security"]

[[bin]]
name = "realistic_network_test"
path = "src/bin/realistic_network_test.rs"
required-features = ["networking", "security"]

[[bin]]
name = "golden_path_test"
path = "src/bin/golden_path_test.rs"
# No required features - core + economy only

# ============================================
# GAMEPLAY ALPHA - Unit 2 + Unit 4 Joint Mission
# ============================================
[[bin]]
name = "gameplay_alpha"
path = "src/bin/gameplay_alpha.rs"
required-features = ["client"]

[lints]
workspace = true
