# =============================================================================
# OROBOROS - Main Game Crate
# =============================================================================
# ARCHITECT'S MANDATE: Feature Separation
#
# This crate provides MULTIPLE binaries:
# - `oroboros_client`: Legacy WGPU client (deprecated)
# - `bevy_client`: NEW Bevy-based client (PRODUCTION)
# - `oroboros_server`: Headless, runs on German servers
#
# RULE: Server must NEVER pull GPU dependencies.
# =============================================================================

[package]
name = "oroboros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OROBOROS - The Game"

[dependencies]
# ============================================
# ALWAYS INCLUDED (both client and server)
# ============================================

# Unit 1: Core Kernel - ECS, memory, double buffer
oroboros_core = { path = "../oroboros_core" }

# Shared types - protocols, events, math
oroboros_shared = { path = "../oroboros_shared" }

# Unit 3: Economy - loot, WAL, transactions
oroboros_economy = { path = "../oroboros_economy" }

# Procedural Generation - Infinite terrain
oroboros_procedural = { path = "../oroboros_procedural" }

# Base dependencies
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

# WASM support - needed for browser builds
getrandom = { workspace = true }

# ============================================
# BEVY CLIENT (NEW - Production Ready)
# ============================================

# The Engine - replaces manual WGPU and windowing
# NOTE: We disable audio (bevy_audio) to avoid ALSA dependency on servers
# NOTE: No dynamic_linking - conflicts with panic=abort in workspace
# NOTE: WebGL2 enabled for WASM browser support
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline", 
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_gizmos",
    "png",
    "tonemapping_luts",      # Required for HDR tonemapping
    "webgl2",                # WASM/Browser support
    "x11",
    "wayland",
], optional = true }

# NOTE: bevy_atmosphere removed - not WASM compatible
# GLITCH WARS uses void background instead of sky

# FPS camera controller
bevy_flycam = { version = "0.13", optional = true }

# ENTERPRISE PHYSICS - bevy_xpbd_3d (WASM compatible)
# Keep default-collider + parry-f32 for Collider support
# parallel/async disabled by default in 0.4 when not specified
bevy_xpbd_3d = { version = "0.4.2", default-features = false, features = [
    "3d",
    "f32", 
    "default-collider",    # Required for Collider type
    "parry-f32",           # Parry physics backend
    "collider-from-mesh",  # Required for Collider::trimesh_from_mesh
    "debug-plugin",        # Required for PhysicsDebugPlugin (red lines)
], optional = true }

# Debug UI
bevy_egui = { version = "0.27", optional = true }

# Industry standard meshing (kept!)
block-mesh = { version = "0.2", optional = true }

# ndshape for array indexing
ndshape = { version = "0.3", optional = true }

# ============================================
# LEGACY CLIENT (deprecated - keeping for reference)
# ============================================

# Unit 2: Rendering (LEGACY - requires GPU)
oroboros_rendering = { path = "../oroboros_rendering", optional = true }

# Window creation (LEGACY)
winit = { version = "0.29", optional = true }

# GPU (LEGACY) - for direct window surface creation
wgpu = { version = "0.19", optional = true }

# Async runtime helper (LEGACY)
pollster = { version = "0.3", optional = true }

# ============================================
# NETWORK FEATURES (both, but optional)
# ============================================

# Unit 4: Networking
oroboros_networking = { path = "../oroboros_networking", optional = true }

# Security
oroboros_security = { path = "../oroboros_security", optional = true }

[features]
default = []

# NEW: Bevy-based client (PRODUCTION - Native with networking)
bevy_client = [
    "dep:bevy",
    # NOTE: bevy_flycam REMOVED - was causing noclip
    "dep:bevy_egui",
    "dep:bevy_xpbd_3d",  # Enterprise physics
    "dep:block-mesh",
    "dep:ndshape",
    "networking",
    "security",
]

# GLITCH WARS: WASM build (with physics, no networking)
bevy_client_wasm = [
    "dep:bevy",
    # NOTE: bevy_flycam REMOVED - was causing noclip
    "dep:bevy_xpbd_3d",  # Enterprise physics (parallel disabled for WASM)
    "dep:block-mesh",
    "dep:ndshape",
]

# LEGACY: Full client with all features (deprecated)
client = ["rendering", "networking", "security", "dep:winit", "dep:wgpu", "dep:pollster"]

# Full server with all features  
server = ["networking", "security"]

# Individual features
rendering = ["dep:oroboros_rendering"]
networking = ["dep:oroboros_networking"]
security = ["dep:oroboros_security"]

# ============================================
# BINARIES
# ============================================

# NEW: BEVY CLIENT - Production ready (Native)
[[bin]]
name = "bevy_client"
path = "src/bin/bevy_client.rs"
required-features = ["bevy_client"]

# GLITCH WARS: WASM build
[[bin]]
name = "glitch_wars"
path = "src/bin/bevy_client.rs"
required-features = ["bevy_client_wasm"]

# LEGACY CLIENT - Has graphics, runs on player's machine (deprecated)
[[bin]]
name = "oroboros_client"
path = "src/bin/client.rs"
required-features = ["client"]

# THE SERVER - Headless, runs in Germany
[[bin]]
name = "oroboros_server"
path = "src/bin/server.rs"
required-features = ["server"]

# ============================================
# TEST BINARIES
# ============================================

[[bin]]
name = "vertical_slice_test"
path = "src/bin/vertical_slice_test.rs"
required-features = ["networking", "security"]

[[bin]]
name = "realistic_network_test"
path = "src/bin/realistic_network_test.rs"
required-features = ["networking", "security"]

[[bin]]
name = "golden_path_test"
path = "src/bin/golden_path_test.rs"
# No required features - core + economy only

# LEGACY: GAMEPLAY ALPHA - Unit 2 + Unit 4 Joint Mission
[[bin]]
name = "gameplay_alpha"
path = "src/bin/gameplay_alpha.rs"
required-features = ["client"]

# =============================================================================
# WASM TARGET DEPENDENCIES
# =============================================================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom 0.3 with wasm_js feature (required by some deps)
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["v4", "js"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
# Better panic messages in browser console
console_error_panic_hook = "0.1"

[lints]
workspace = true
